fixed javascript steps issue in searchdbspoon page. fixed comment button not showing up.

--- a/src/main/resources/static/css/plateful.css
+++ b/src/main/resources/static/css/plateful.css
@@ -1240,6 +1240,7 @@ div.container.login-container {
     }
     #ingredients-content {
         flex-direction: column;
+        gap: unset;
     }
     #ingredients-list {
         flex-direction: column;
